added two more product cards

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </header>
     <main class="main-container">
         <div class="shopping-card">
-            <header class="card-header">
+            <header class="card-header-asics">
                 <div><img src="" alt=""></div>
                 <aside class="badge">Free Shipping!</aside>
-                <div class="source1">Photo by Maksim Larin</div>
+                <div class="source">Photo by Maksim Larin</div>
             </header>
             <article class="card-content">
                 <h2>Asics</h2>
@@ -34,8 +34,46 @@
                 </div>
             </article>
         </div>
-        <div class="shopping-card"></div>
-        <div class="shopping-card"></div>
+        <div class="shopping-card">
+            <header class="card-header-adidas">
+                <div><img src="" alt=""></div>
+                <aside class="badge">Free Shipping!</aside>
+                <div class="source">Photo by Daniel Storek</div>
+            </header>
+            <article class="card-content">
+                <h2>Adidas</h2>
+                <p>Effortless comfortable full leather lining eue-catching unique detail to the toe low 'cut-away' sides
+                    clean and sleek. Polished finish elegant court shoe work duty
+                    stretchy slingback strap mid kitten heel this ladylike...</p>
+                <div class="cart-section">
+                    <p>$30 USD</p>
+                    <p>Size:</p>
+                    <p>Quantity:</p>
+                    <p>Color:</p>
+                    <p>Add to Cart</p>
+                </div>
+            </article>
+        </div>
+        <div class="shopping-card">
+            <header class="card-header-newbalance">
+                <div><img src="" alt=""></div>
+                <aside class="badge">Free Shipping!</aside>
+                <div class="source">Photo by felipepelaquim</div>
+            </header>
+            <article class="card-content">
+                <h2>New Balance</h2>
+                <p>Suede fabric pointed toe stylish cut front low heel sharp on-trend toe point raised heel drop sides
+                    unique silhouette. Bow detail metallic eyelets leather lining
+                    luxurious finish classic courts formal slingback square...</p>
+                <div class="cart-section">
+                    <p>$65 USD</p>
+                    <p>Size:</p>
+                    <p>Quantity:</p>
+                    <p>Color:</p>
+                    <p>Add to Cart</p>
+                </div>
+            </article>
+        </div>
     </main>
 </body>
 
