refactor: renamed some classes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <title>Shopping Layout</title>
 </head>
 
@@ -13,36 +16,37 @@
     <header>
         <h1>Shopping Layout</h1>
     </header>
-    <main class="main-container">
+    <main>
         <div class="shopping-card">
-            <header class="card-header-asics">
+            <header class="card-header card-header-asics">
                 <div><img src="" alt=""></div>
                 <aside class="badge">Free Shipping!</aside>
-                <div class="source">Photo by Maksim Larin</div>
+                <div class="credit">Photo by Maksim Larin</div>
             </header>
             <article class="card-content">
                 <h2>Asics</h2>
-                <p>Suede fabric pointed toe stylish cut front low heel sharp on-trend toe point raised heel drop sides
+                <p class="product-description">Suede fabric pointed toe stylish cut front low heel sharp on-trend toe
+                    point raised heel drop sides
                     unique silhouette. Bow detail metallic eyelets leather lining
                     luxurious finish classic courts formal slingback square...</p>
                 <div class="cart-section">
                     <p>$65 USD</p>
                     <p>Size:</p>
                     <p>Quantity:</p>
-                    <p>Color:</p>
+                    <p>Colors:</p>
                     <p>Add to Cart</p>
                 </div>
             </article>
         </div>
         <div class="shopping-card">
-            <header class="card-header-adidas">
+            <header class="card-header card-header-adidas">
                 <div><img src="" alt=""></div>
-                <aside class="badge">Free Shipping!</aside>
-                <div class="source">Photo by Daniel Storek</div>
+                <div class="credit">Photo by Daniel Storek</div>
             </header>
             <article class="card-content">
                 <h2>Adidas</h2>
-                <p>Effortless comfortable full leather lining eue-catching unique detail to the toe low 'cut-away' sides
+                <p class="product-description">Effortless comfortable full leather lining eue-catching unique detail to
+                    the toe low 'cut-away' sides
                     clean and sleek. Polished finish elegant court shoe work duty
                     stretchy slingback strap mid kitten heel this ladylike...</p>
                 <div class="cart-section">
@@ -55,14 +59,15 @@
             </article>
         </div>
         <div class="shopping-card">
-            <header class="card-header-newbalance">
+            <header class="card-header card-header-newbalance">
                 <div><img src="" alt=""></div>
-                <aside class="badge">Free Shipping!</aside>
-                <div class="source">Photo by felipepelaquim</div>
+                <aside class="badge">Just One Left!</aside>
+                <div class="credit">Photo by felipepelaquim</div>
             </header>
             <article class="card-content">
                 <h2>New Balance</h2>
-                <p>Suede fabric pointed toe stylish cut front low heel sharp on-trend toe point raised heel drop sides
+                <p class="product-description">Suede fabric pointed toe stylish cut front low heel sharp on-trend toe
+                    point raised heel drop sides
                     unique silhouette. Bow detail metallic eyelets leather lining
                     luxurious finish classic courts formal slingback square...</p>
                 <div class="cart-section">
