refactor: adds classes to cart-section items

--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
                     unique silhouette. Bow detail metallic eyelets leather lining
                     luxurious finish classic courts formal slingback square...</p>
                 <div class="cart-section">
-                    <p>$65 USD</p>
-                    <p>Size:</p>
-                    <p>Quantity:</p>
-                    <p>Colors:</p>
-                    <p>Add to Cart</p>
+                    <div class="price">
+                        $65 USD
+                    </div>
+                    <div class="size">
+                        Size:
+                    </div>
+                    <div class="quantity">
+                        Quantity:
+                    </div>
+                    <div class="color">
+                        Color:
+                    </div>
+                    <div class="cart-button">
+                        Add to Cart
+                    </div>
                 </div>
             </article>
+
         </div>
         <div class="shopping-card">
             <header class="card-header card-header-adidas">
@@ -50,11 +61,21 @@
                     clean and sleek. Polished finish elegant court shoe work duty
                     stretchy slingback strap mid kitten heel this ladylike...</p>
                 <div class="cart-section">
-                    <p>$30 USD</p>
-                    <p>Size:</p>
-                    <p>Quantity:</p>
-                    <p>Color:</p>
-                    <p>Add to Cart</p>
+                    <div class="price">
+                        $30 USD
+                    </div>
+                    <div class="size">
+                        Size:
+                    </div>
+                    <div class="quantity">
+                        Quantity:
+                    </div>
+                    <div class="color">
+                        Color:
+                    </div>
+                    <div class="cart-button">
+                        Add to Cart
+                    </div>
                 </div>
             </article>
         </div>
@@ -71,11 +92,21 @@
                     unique silhouette. Bow detail metallic eyelets leather lining
                     luxurious finish classic courts formal slingback square...</p>
                 <div class="cart-section">
-                    <p>$65 USD</p>
-                    <p>Size:</p>
-                    <p>Quantity:</p>
-                    <p>Color:</p>
-                    <p>Add to Cart</p>
+                    <div class="price">
+                        $45 USD
+                    </div>
+                    <div class="size">
+                        Size:
+                    </div>
+                    <div class="quantity">
+                        Quantity:
+                    </div>
+                    <div class="color">
+                        Color:
+                    </div>
+                    <div class="cart-button">
+                        Add to Cart
+                    </div>
                 </div>
             </article>
         </div>
