feat: add size and quantity selection

--- a/index.html
+++ b/index.html
@@ -33,11 +33,27 @@
                     <div class="price">
                         $65 USD
                     </div>
-                    <div class="size">
-                        Size:
+                    <div class="selection-wrapper">
+                        <label for="size-select">Size:</label>
+                        <div class="select">
+                            <select class="selector-field" id="size-select">
+                                <option value="6">6</option>
+                                <option value="6.5">6.5</option>
+                                <option value="7">7</option>
+                                <option value="7.5">7.5</option>
+                                <option value="8">8</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="quantity">
-                        Quantity:
+                    <div class="selection-wrapper">
+                        <label for="quantity-select">Quantity:</label>
+                        <div class="select">
+                            <select class="selector-field" id="quantity-select">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="color">
                         Color:
@@ -64,11 +80,27 @@
                     <div class="price">
                         $30 USD
                     </div>
-                    <div class="size">
-                        Size:
+                    <div class="selection-wrapper">
+                        <label for="size-select">Size:</label>
+                        <div class="select">
+                            <select class="selector-field" id="size-select">
+                                <option value="6">6</option>
+                                <option value="6.5">6.5</option>
+                                <option value="7">7</option>
+                                <option value="7.5">7.5</option>
+                                <option value="8">8</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="quantity">
-                        Quantity:
+                    <div class="selection-wrapper">
+                        <label for="quantity-select">Quantity:</label>
+                        <div class="select">
+                            <select class="selector-field" id="quantity-select">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="color">
                         Color:
@@ -95,11 +127,21 @@
                     <div class="price">
                         $45 USD
                     </div>
-                    <div class="size">
-                        Size:
+                    <div class="selection-wrapper">
+                        <label for="size-select">Size:</label>
+                        <div class="select">
+                            <select class="selector-field" id="size-select">
+                                <option value="6">6</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="quantity">
-                        Quantity:
+                    <div class="selection-wrapper">
+                        <label for="quantity-select">Quantity:</label>
+                        <div class="select">
+                            <select class="selector-field" id="quantity-select">
+                                <option value="1">1</option>
+                            </select>
+                        </div>
                     </div>
                     <div class="color">
                         Color:
