feat: add color selection form

--- a/index.html
+++ b/index.html
@@ -55,15 +55,31 @@
                             </select>
                         </div>
                     </div>
-                    <div class="color">
-                        Color:
+                    <div class="color-selection-wrapper">
+                        <span>Color:</span>
+                        <form>
+                            <input type="radio" name="color" id="blue" class="color">
+                            <label for="blue">
+                                <span class="only-screenreader">Blau</span>
+                                <div class="color-circle blue"></div>
+                            </label>
+                            <input type="radio" name="color" id="red" class="color">
+                            <label for="red">
+                                <span class="only-screenreader">Rot</span>
+                                <div class="color-circle red"></div>
+                            </label>
+                            <input type="radio" name="color" id="black" class="color">
+                            <label for="black">
+                                <span class="only-screenreader">Schwarz</span>
+                                <div class="color-circle black"></div>
+                            </label>
+                        </form>
                     </div>
                     <div class="cart-button">
                         Add to Cart
                     </div>
                 </div>
             </article>
-
         </div>
         <div class="shopping-card">
             <header class="card-header card-header-adidas">
@@ -102,8 +118,25 @@
                             </select>
                         </div>
                     </div>
-                    <div class="color">
-                        Color:
+                    <div class="color-selection-wrapper">
+                        <span>Color:</span>
+                        <form>
+                            <input type="radio" name="color" id="green-black" class="color">
+                            <label for="green-black">
+                                <span class="only-screenreader">Grün-Schwarz</span>
+                                <div class="color-circle green-black"></div>
+                            </label>
+                            <input type="radio" name="color" id="blue-black" class="color">
+                            <label for="blue-black">
+                                <span class="only-screenreader">Blau-Schwarz</span>
+                                <div class="color-circle blue-black"></div>
+                            </label>
+                            <input type="radio" name="color" id="pink-black" class="color">
+                            <label for="pink-black">
+                                <span class="only-screenreader">Pink-Schwarz</span>
+                                <div class="color-circle pink-black"></div>
+                            </label>
+                        </form>
                     </div>
                     <div class="cart-button">
                         Add to Cart
@@ -143,8 +176,20 @@
                             </select>
                         </div>
                     </div>
-                    <div class="color">
-                        Color:
+                    <div class="color-selection-wrapper">
+                        <span>Color:</span>
+                        <form>
+                            <input type="radio" name="color" id="red-white" class="color">
+                            <label for="red-white">
+                                <span class="only-screenreader">Rot-Weiß</span>
+                                <div class="color-circle red-white"></div>
+                            </label>
+                            <input type="radio" name="color" id="black-white" class="color">
+                            <label for="black-white">
+                                <span class="only-screenreader">Schwarz-Weiß</span>
+                                <div class="color-circle black-white"></div>
+                            </label>
+                        </form>
                     </div>
                     <div class="cart-button">
                         Add to Cart
