--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                         </form>
                     </div>
                     <div class="cart-button">
-                        Add to Cart
+                        <form>
+                            <button class="button" type="button">
+                                Add to Cart
+                            </button>
+                        </form>
                     </div>
                 </div>
             </article>
@@ -139,7 +143,11 @@
                         </form>
                     </div>
                     <div class="cart-button">
-                        Add to Cart
+                        <form>
+                            <button class="button" type="button">
+                                Add to Cart
+                            </button>
+                        </form>
                     </div>
                 </div>
             </article>
@@ -192,7 +200,11 @@
                         </form>
                     </div>
                     <div class="cart-button">
-                        Add to Cart
+                        <form>
+                            <button class="button" type="button">
+                                Add to Cart
+                            </button>
+                        </form>
                     </div>
                 </div>
             </article>
