--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="color-selection-wrapper">
-                        <span>Color:</span>
+                        <span class="fake-label">Color:</span>
                         <form>
                             <input type="radio" name="color" id="blue" class="color">
                             <label for="blue">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="color-selection-wrapper">
-                        <span>Color:</span>
+                        <span class="fake-label">Color:</span>
                         <form>
                             <input type="radio" name="color" id="green-black" class="color">
                             <label for="green-black">
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                     <div class="color-selection-wrapper">
-                        <span>Color:</span>
+                        <span class="fake-label">Color:</span>
                         <form>
                             <input type="radio" name="color" id="red-white" class="color">
                             <label for="red-white">
